; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ata/extr_ata_all.c_semb_receive_diagnostic_results.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ata/extr_ata_all.c_semb_receive_diagnostic_results.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccb_ataio = type { i32 }
%struct.cam_periph = type opaque
%union.ccb = type opaque
%struct.cam_periph.0 = type opaque
%union.ccb.1 = type opaque

@CAM_DIR_IN = common dso_local global i32 0, align 4
@ATA_SEP_ATTN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @semb_receive_diagnostic_results(%struct.ccb_ataio* %0, i32 %1, void (%struct.cam_periph*, %union.ccb*)* %2, i32 %3, i32 %4, i32 %5, i32* %6, i32 %7, i32 %8) #0 {
  %10 = alloca %struct.ccb_ataio*, align 8
  %11 = alloca i32, align 4
  %12 = alloca void (%struct.cam_periph*, %union.ccb*)*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store %struct.ccb_ataio* %0, %struct.ccb_ataio** %10, align 8
  store i32 %1, i32* %11, align 4
  store void (%struct.cam_periph*, %union.ccb*)* %2, void (%struct.cam_periph*, %union.ccb*)** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %19 = load i32, i32* %17, align 4
  %20 = call i32 @min(i32 %19, i32 1020)
  store i32 %20, i32* %17, align 4
  %21 = load i32, i32* %17, align 4
  %22 = add nsw i32 %21, 3
  %23 = and i32 %22, -4
  store i32 %23, i32* %17, align 4
  %24 = load %struct.ccb_ataio*, %struct.ccb_ataio** %10, align 8
  %25 = load i32, i32* %11, align 4
  %26 = load void (%struct.cam_periph*, %union.ccb*)*, void (%struct.cam_periph*, %union.ccb*)** %12, align 8
  %27 = bitcast void (%struct.cam_periph*, %union.ccb*)* %26 to void (%struct.cam_periph.0*, %union.ccb.1*)*
  %28 = load i32, i32* @CAM_DIR_IN, align 4
  %29 = load i32, i32* %13, align 4
  %30 = load i32*, i32** %16, align 8
  %31 = load i32, i32* %17, align 4
  %32 = load i32, i32* %18, align 4
  %33 = call i32 @cam_fill_ataio(%struct.ccb_ataio* %24, i32 %25, void (%struct.cam_periph.0*, %union.ccb.1*)* %27, i32 %28, i32 %29, i32* %30, i32 %31, i32 %32)
  %34 = load %struct.ccb_ataio*, %struct.ccb_ataio** %10, align 8
  %35 = load i32, i32* @ATA_SEP_ATTN, align 4
  %36 = load i32, i32* %14, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %9
  %39 = load i32, i32* %15, align 4
  br label %41

40:                                               ; preds = %9
  br label %41

41:                                               ; preds = %40, %38
  %42 = phi i32 [ %39, %38 ], [ 0, %40 ]
  %43 = load i32, i32* %17, align 4
  %44 = sdiv i32 %43, 4
  %45 = call i32 @ata_28bit_cmd(%struct.ccb_ataio* %34, i32 %35, i32 %42, i32 2, i32 %44)
  ret void
}

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @cam_fill_ataio(%struct.ccb_ataio*, i32, void (%struct.cam_periph.0*, %union.ccb.1*)*, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @ata_28bit_cmd(%struct.ccb_ataio*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
